--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Lato');
+
+/*------------------------------*/
 /* SASS Variables */
+/*------------------------------*/
 
 $font_stack: Lato, sans-serif;
 $green_color: #14bd4c;
@@ -9,7 +12,9 @@ $white_color: #FFF;
 $black_color: #000;
 $section_grey: #e6e6e6;
 
+/*------------------------------*/
 /* General Style */
+/*------------------------------*/
 
 * {
 	box-sizing: border-box;
@@ -41,7 +46,9 @@ body {
 	align-items: center;
 }
 
+/*------------------------------*/
 /* Navigation */
+/*------------------------------*/
 
 header {
 	background-color: $white_color;
@@ -90,7 +97,9 @@ header {
 	}
 }
 
+/*------------------------------*/
 /* Jumbotron section*/
+/*------------------------------*/
 
 .jumbotron {
 	background-color: $green_color;
@@ -128,7 +137,9 @@ header {
 	}
 }
 
+/*------------------------------*/
 /* Skills section */
+/*------------------------------*/
 
 .img-html {background-image: url("../images/HTML5.png");}
 .img-css3 {background-image: url("../images/CSS3.png");}
@@ -173,105 +184,95 @@ header {
 					font-size: 30px;
 					font-weight: bold;
 					width: 100%;
-					cursor: pointer;
 					box-shadow: 0 20px 30px 0 $black_color;
 					color: #DDDDDD;
 					.html {
 						width: 0.1%;
-						text-align: right;
-						display: flex;
+					}
+					.css3 {
+						width: 0.1%;
+					}
+					.js {
+						width: 0.1%;
 					}
 				}
 			}
 		}
 	}
 
+/*------------------------------*/
+/* HOVER TECHNOLOGY */
+/*------------------------------*/
+
+/* Hover HTML */
+
+.skills .flex-row .progress-container .image1:hover {
+	transform: scale(1.1);
+	transition: 1s;
+}
 .skills .flex-row .progress-container .image1:hover + .progress .html {
 	background-color: #F16529;
 	box-shadow: none;
 	color: $black-color;
 	transition: 1s;
 	width: 30%;
+	text-align: right;
 }
 .skills .flex-row .progress-container .image1:hover + .progress {
 	box-shadow: none;
 	transition: 1s;
 }
 
+/* Hover CSS3 */
 
+.skills .flex-row .progress-container .image2:hover {
+	transform: scale(1.1);
+	transition: 1s;
+}
+.skills .flex-row .progress-container .image2:hover + .progress .css3 {
+	background-color: #369CD6;
+	box-shadow: none;
+	color: $black-color;
+	transition: 1s;
+	width: 30%;
+	text-align: right;
+}
+.skills .flex-row .progress-container .image2:hover + .progress {
+	box-shadow: none;
+	transition: 1s;
+}
 
+/* Hover JS */
 
-					// margin: 0 30px;
-					// img {
-					// width: 25%;
-					// margin: 0 30px;
-					// }
-	// .progress-container {
-	// 	display: flex;
-	// 	flex-direction: row;
-	// 	max-width: 1200px;
-	// 	margin: 0 auto;
-	// 	width: 100%;
-	// 	.progress {
-	// 		background-color: #BDC3C7;
-	// 		margin: 20px 10px;
-	// 		display: flex;
-	// 		align-items: center;
-	// 		font-size: 30px;
-	// 		font-weight: bold;
-	// 		width: 100%;
-	// 		cursor: pointer;
-	// 		box-shadow: 0 20px 30px 0 $black-color;
-	// 		color: $white-color;
-	// 		.html {
-	// 			width: 0.1%;
-	// 			// background-color: $green_color;
-	// 			text-align: right;
-	// 			&:hover {
-	// 				background-color: #F16529;
-	// 				box-shadow: none;
-	// 				color: $black-color;
-	// 				transition: 1s;
-	// 				width: 30%;
-	// 			}
-	// 		}
-// 			.css3 {
-// 				width: 30%;
-// 				background-color: $green_color;
-// 				text-align: right;
-// 				&:hover {
-// 					background-color: #369CD6;
-// 					color: $black-color;
-// 					transition: .8s;
-// 				}
-// 			}
-// 			.js {
-// 				width: 10%;
-// 				background-color: $green_color;
-// 				&:hover {
-// 					background-color: #F7DF1E;
-// 					color: $black-color;
-// 					transition: .8s;
-// 				}
-// 			}
-// 			&:hover {
-// 				transition: .8s;
-// 				box-shadow: none;
-// 				background-color: #999999;
-// 			}
-// 		}
-// 	}
-// }
+.skills .flex-row .progress-container .image3:hover {
+	transform: scale(1.1);
+	transition: 1s;
+}
+.skills .flex-row .progress-container .image3:hover + .progress .js {
+	background-color: #F7DF1E;
+	box-shadow: none;
+	color: $black-color;
+	transition: 1s;
+	width: 10%;
+	text-align: right;
+}
+.skills .flex-row .progress-container .image3:hover + .progress {
+	box-shadow: none;
+	transition: 1s;
+}
 
-
+/*------------------------------*/
 /* Projects section */
-
+/*------------------------------*/
 .projects {
 	height: 100vh;
 	background-color: #bdc3c7;
 }
 
+/*------------------------------*/
 /* Game section */
+/*------------------------------*/
+
 .span-label {
 	height: 40px;
 	width: 100px;
@@ -405,6 +406,11 @@ header {
 		}
 	}
 }
+
+/*------------------------------*/
+/* Footer */
+/*------------------------------*/
+
 footer {
 	background-color: $black_color;
 	color: $white_color;
