--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Lato");
+@import url("https://fonts.googleapis.com/css?family=Mitr");
+@import url("https://fonts.googleapis.com/css?family=Mitr|Nova+Square");
+@import url("https://fonts.googleapis.com/css?family=Mitr|Noto+Sans|Nova+Square");
 /*------------------------------*/
 /* SASS Variables */
 /*------------------------------*/
@@ -19,7 +22,7 @@ body {
   font-size: 25px;
   font-weight: bold;
   border: none;
-  box-shadow: 0 20px 30px 0 #000;
+  box-shadow: 0 10px 40px 0 #14bd4c;
   cursor: pointer; }
 
 .activeButton:active {
@@ -81,7 +84,7 @@ header {
 /* Jumbotron section*/
 /*------------------------------*/
 .jumbotron {
-  background-color: #14bd4c;
+  background-color: #000;
   height: 100vh;
   margin: 0 auto;
   text-align: center;
@@ -105,7 +108,7 @@ header {
       background-color: #FFF;
       color: #14bd4c; }
       .jumbotron .particles .button-technology:hover {
-        background-color: black;
+        background-color: #14bd4c;
         color: #FFF;
         transition: .8s;
         box-shadow: none; }
@@ -124,8 +127,9 @@ header {
 
 .skills {
   height: 100vh;
-  background-color: #bdc3c7;
-  position: relative; }
+  background-color: #FFF;
+  position: relative;
+  background: linear-gradient(180deg, #000, #bdc3c7); }
   .skills .flex-row {
     display: flex;
     max-width: 80%;
@@ -173,8 +177,9 @@ header {
     left: 0;
     right: 0; }
     .skills .career-goal p {
-      color: #000;
-      font-weight: bold;
+      color: #FFF;
+      font-family: 'Mitr', sans-serif;
+      font-weight: semi-bold;
       font-size: 30px;
       text-align: center; }
 
@@ -237,7 +242,7 @@ header {
 /*------------------------------*/
 .projects {
   height: 100vh;
-  background-color: #14bd4c; }
+  background: linear-gradient(180deg, #bdc3c7, #6D8084); }
 
 /*------------------------------*/
 /* Game section */
