--- a/css/style.scss
+++ b/css/style.scss
@@ -39,7 +39,7 @@ body {
 	font-size: 25px;
 	font-weight: bold;
 	border: none;
-	box-shadow: 0 10px 40px 0 $green_color;
+	box-shadow: 0 10px 40px 0 $css_darker_blue;
 	cursor: pointer;
 }
 .activeButton:active {
@@ -96,9 +96,9 @@ header {
 					color: $black_color;
 					font-weight: bold;
 					&:hover {
-					color: $green_color;
-					font-size: 18px;
-					transition: 0.5s;
+					color: $css_blue;
+					font-size: 20px;
+					transition: 0.8s;
 					}
 				}
 			}
@@ -135,9 +135,9 @@ header {
 		}
 		.button-technology {
 			background-color: $white_color;
-			color: $green_color;
+			color: $css_darker_blue;
 			&:hover {
-				background-color: $green_color;
+				background-color: $css_blue;
 				color: $white_color;
 				transition: .8s;
 				box-shadow: none;
@@ -158,7 +158,7 @@ header {
 	height: 100vh;
 	background-color: $white_color;
 	position: relative;
-	background: linear-gradient(180deg, $black_color, $darker_grey);
+	background: linear-gradient(180deg, $black_color, $css_blue);
 	.flex-row {
 		display: flex;
 		max-width: 80%;
@@ -178,17 +178,17 @@ header {
 				}
 				.image1 {
 					img {
-						width: 100%;
+						width: 90%;
 					}
 				}
 				.image2 {
 					img {
-						width: 100%;
+						width: 90%;
 					}
 				}
 				.image3 {
 					img {
-						width: 100%;
+						width: 90%;
 					}
 				}
 				.progress {
@@ -229,7 +229,11 @@ header {
 			font-weight: semi-bold;
 			font-size: 30px;
 			text-align: center;
-			// box-shadow: 0 20px 30px 0 $black_color;
+			cursor: pointer;
+			&:hover {
+				box-shadow: 0 10px 30px 10px $section_grey;
+				transition: 1s;
+			}
 		}
 	}
 }
@@ -301,6 +305,21 @@ header {
 .projects {
 	height: 100vh;
 	background: linear-gradient(180deg, $darker_grey, #6D8084);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	.flex-row {
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
+		// box-sizing: border-box;
+		width: 100%;
+		.projects-image {
+			display: flex;
+			flex-direction: column;
+			margin-right: 10px;
+		}
+	}
 }
 
 /*------------------------------*/
