--- a/css/style.css
+++ b/css/style.css
@@ -74,11 +74,25 @@ header {
         header .menu ul li a {
           text-decoration: none;
           color: #000;
-          font-weight: bold; }
+          font-weight: bold;
+          position: relative; }
           header .menu ul li a:hover {
-            color: #369CD6;
             font-size: 20px;
             transition: 0.8s; }
+          header .menu ul li a:before {
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 2px;
+            bottom: 0;
+            left: 0;
+            background-color: #2162AF;
+            visibility: hidden;
+            transform: scaleX(0);
+            transition: all 0.8s ease-in-out 0s; }
+          header .menu ul li a:hover:before {
+            visibility: visible;
+            transform: scaleX(1); }
 
 /*------------------------------*/
 /* Jumbotron section*/
@@ -309,10 +323,11 @@ header {
       color: #FFF;
       font-size: 30px; }
   .game .new-game-container .newGameButton {
-    background-color: #14bd4c; }
+    background-color: #369CD6;
+    box-shadow: 0 10px 40px 10px #FFF; }
     .game .new-game-container .newGameButton:hover {
-      color: #FFF;
-      background-color: #0d7830;
+      color: #369CD6;
+      background-color: #FFF;
       transition: .8s;
       box-shadow: none; }
   .game .player-pick-container {
