--- a/css/style.scss
+++ b/css/style.scss
@@ -95,10 +95,26 @@ header {
 					text-decoration: none;
 					color: $black_color;
 					font-weight: bold;
+					position: relative;
 					&:hover {
-					color: $css_blue;
-					font-size: 20px;
-					transition: 0.8s;
+						font-size: 20px;
+						transition: 0.8s;
+					}
+					&:before {
+						content: "";
+						position: absolute;
+						width: 100%;
+						height: 2px;
+						bottom: 0;
+						left: 0;
+						background-color: $css_darker_blue;
+						visibility: hidden;
+						transform: scaleX(0);
+						transition: all 0.8s ease-in-out 0s;
+					}
+					&:hover:before {
+						visibility: visible;
+						transform: scaleX(1);
 					}
 				}
 			}
@@ -376,10 +392,11 @@ header {
 	}
 	.new-game-container {
 		.newGameButton {
-			background-color: $green_color;
+			background-color: $css_blue;
+			box-shadow: 0 10px 40px 10px $white_color;
 			&:hover {
-				color: $white_color;
-				background-color: #0d7830;
+				color: $css_blue;
+				background-color: $white_color;
 				transition: .8s;
 				box-shadow: none;
 			}
