--- a/css/style.scss
+++ b/css/style.scss
@@ -397,7 +397,7 @@ header {
 			&:hover {
 				color: $css_blue;
 				background-color: $white_color;
-				transition: .8s;
+				transition: 1s;
 				box-shadow: none;
 			}
 		}
