--- a/css/style.scss
+++ b/css/style.scss
@@ -184,52 +184,54 @@ header {
 		margin-top: -300px;
 		left: 0;
 		right: 0;
-			.progress-container {
+		.progress-container {
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			margin: 0 20px;
+			width: 100%;
+			.image-class {
+				cursor: pointer;
+				text-align: center;
+			}
+			.image1 {
+				img {
+					width: 90%;
+				}
+			}
+			.image2 {
+				img {
+					width: 90%;
+				}
+			}
+			.image3 {
+				img {
+					width: 90%;
+				}
+			}
+			.progress {
+				background-color: #DDDDDD;
+				box-sizing: border-box;
+				margin: 20px auto;
 				display: flex;
-				flex-direction: column;
-				margin: 0 20px;
+				align-items: center;
+				font-size: 30px;
+				font-weight: bold;
 				width: 100%;
-				.image-class {
-					cursor: pointer;
+				box-shadow: 0 20px 30px 0 $black_color;
+				color: #DDDDDD;
+				.html {
+					width: 0.1%;
 				}
-				.image1 {
-					img {
-						width: 90%;
-					}
+				.css3 {
+					width: 0.1%;
 				}
-				.image2 {
-					img {
-						width: 90%;
-					}
-				}
-				.image3 {
-					img {
-						width: 90%;
-					}
-				}
-				.progress {
-					background-color: #DDDDDD;
-					box-sizing: border-box;
-					margin: 20px auto;
-					display: flex;
-					align-items: center;
-					font-size: 30px;
-					font-weight: bold;
-					width: 100%;
-					box-shadow: 0 20px 30px 0 $black_color;
-					color: #DDDDDD;
-					.html {
-						width: 0.1%;
-					}
-					.css3 {
-						width: 0.1%;
-					}
-					.js {
-						width: 0.1%;
-					}
+				.js {
+					width: 0.1%;
 				}
 			}
 		}
+	}
 	.career-goal {
 		position: absolute;
 		bottom: 10%;
@@ -239,9 +241,7 @@ header {
 		right: 0;
 		p {
 			color: $white_color;
-			// font-family: 'Noto Sans', sans-serif;
 			font-family: 'Mitr', sans-serif;
-			// font-family: 'Nova Square', cursive;
 			font-weight: semi-bold;
 			font-size: 30px;
 			text-align: center;
@@ -318,6 +318,7 @@ header {
 /*------------------------------*/
 /* Projects section */
 /*------------------------------*/
+
 .projects {
 	height: 100vh;
 	background: linear-gradient(180deg, $darker_grey, #6D8084);
@@ -328,7 +329,6 @@ header {
 		display: flex;
 		flex-direction: row;
 		justify-content: center;
-		// box-sizing: border-box;
 		width: 100%;
 		.projects-image {
 			display: flex;
