--- a/css/style.css
+++ b/css/style.css
@@ -78,13 +78,14 @@ header {
           position: relative; }
           header .menu ul li a:hover {
             font-size: 20px;
-            transition: 0.8s; }
+            transition: 0.8s;
+            color: #369CD6; }
           header .menu ul li a:before {
             content: "";
             position: absolute;
             width: 100%;
-            height: 2px;
-            bottom: 0;
+            height: 3px;
+            bottom: -5px;
             left: 0;
             background-color: #2162AF;
             visibility: hidden;
@@ -143,7 +144,7 @@ header {
   height: 100vh;
   background-color: #FFF;
   position: relative;
-  background: linear-gradient(180deg, #000, #369CD6); }
+  background: linear-gradient(180deg, #000, #13305B, #499ADB); }
   .skills .flex-row {
     display: flex;
     max-width: 80%;
@@ -200,7 +201,7 @@ header {
       text-align: center;
       cursor: pointer; }
       .skills .career-goal p:hover {
-        box-shadow: 0 10px 30px 10px #e6e6e6;
+        box-shadow: 0 0 20px 10px #e6e6e6;
         transition: 1s; }
 
 /*------------------------------*/
@@ -262,7 +263,7 @@ header {
 /*------------------------------*/
 .projects {
   height: 100vh;
-  background: linear-gradient(180deg, #bdc3c7, #6D8084);
+  background: linear-gradient(180deg, #499ADB, #9FCCED);
   display: flex;
   justify-content: center;
   align-items: center; }
@@ -310,7 +311,8 @@ header {
   background-position: center;
   background-repeat: no-repeat;
   margin-bottom: -80px;
-  background-size: 100% 100%; }
+  background-size: 100% 100%;
+  box-shadow: 0 10px 30px 10px #FFF; }
   .game > h1 {
     text-align: center;
     font-size: 60px;
