--- a/css/style.scss
+++ b/css/style.scss
@@ -371,35 +371,34 @@ header {
 		.projects-images {
 			cursor: pointer;
 			text-align: center;
-			padding: 0 10px;
 			img {
-				width: 400px;
+				height: 300px;
+				max-height: 100%;
+				width: 500px;
 				max-width: 100%;
+				margin: 40px 0;
 				&:hover {
-					transform: scale(1.1);
+					transform: scale(1.3);
 					transition: .4s;
 				}
 			}
-			a {
-				text-decoration: none;
-				.github {
-				cursor: pointer;
-				display: flex;
-				justify-content: center;
-				width: 100px;
-				height: 100px;
-				margin: 0 auto;
-				margin-top: 30px;
-				font-size: 60px;
-				border-radius: 20px;
-				border: none;
-				outline: none;
-				&:hover {
-					color: $white_color;
-					background-color: $black_color;
-					transition: .6s;
-					transform: scale(1.1);
-					}
+			text-decoration: none;
+			.github {
+			display: inline-block;
+			cursor: pointer;
+			width: 100px;
+			height: 100px;
+			margin: 0 auto;
+			margin-top: 30px;
+			font-size: 60px;
+			border-radius: 20px;
+			border: none;
+			outline: none;
+			&:hover {
+				color: $white_color;
+				background-color: $black_color;
+				transition: .6s;
+				transform: scale(1.1);
 				}
 			}
 		}
