--- a/css/style.css
+++ b/css/style.css
@@ -168,11 +168,11 @@ header {
         cursor: pointer;
         text-align: center; }
       .skills .flex-row .progress-container .image1 img {
-        width: 90%; }
+        width: 70%; }
       .skills .flex-row .progress-container .image2 img {
-        width: 90%; }
+        width: 70%; }
       .skills .flex-row .progress-container .image3 img {
-        width: 90%; }
+        width: 70%; }
       .skills .flex-row .progress-container .progress {
         background-color: #DDDDDD;
         box-sizing: border-box;
@@ -276,56 +276,53 @@ header {
     margin: 0 auto;
     margin-bottom: 20px;
     text-align: center; }
-  .projects .flex-row {
-    display: flex;
-    flex-direction: row;
-    align-content: center;
-    position: absolute;
-    top: 50%;
-    margin-top: -310px;
-    left: 0;
-    right: 0; }
-    .projects .flex-row .portfolio h1 {
-      color: #000;
-      font-family: 'Mitr', sans-serif;
-      font-size: 50px; }
-    .projects .flex-row .fire h1 {
-      color: #C63473;
-      font-family: 'Eagle Lake', cursive;
-      font-size: 50px; }
-    .projects .flex-row .company h1 {
-      color: #313332;
-      font-family: 'Open Sans', sans-serif;
-      font-size: 50px; }
-    .projects .flex-row .projects-images {
+  .projects .flex-row h1 {
+    font-family: Lato, sans-serif;
+    font-size: 50px; }
+  .projects .flex-row .projects-images {
+    text-align: center; }
+    .projects .flex-row .projects-images img {
       cursor: pointer;
-      text-align: center;
-      text-decoration: none; }
-      .projects .flex-row .projects-images img {
-        height: 300px;
-        max-height: 100%;
-        width: 500px;
-        max-width: 100%;
-        margin: 40px 0; }
-        .projects .flex-row .projects-images img:hover {
-          transform: scale(1.3);
-          transition: .4s; }
-      .projects .flex-row .projects-images .github {
-        display: inline-block;
-        cursor: pointer;
-        width: 100px;
-        height: 100px;
-        margin: 0 auto;
-        margin-top: 30px;
-        font-size: 60px;
-        border-radius: 20px;
-        border: none;
-        outline: none; }
-        .projects .flex-row .projects-images .github:hover {
-          color: #FFF;
-          background-color: #000;
-          transition: .6s;
-          transform: scale(1.1); }
+      height: 300px;
+      max-height: 100%;
+      width: 500px;
+      max-width: 100%;
+      margin: 40px 30px;
+      box-shadow: 0 10px 40px 20px #FFF; }
+      .projects .flex-row .projects-images img:hover {
+        transform: scale(1.2);
+        transition: .6s;
+        box-shadow: none; }
+    .projects .flex-row .projects-images .github {
+      display: inline-block;
+      cursor: pointer;
+      width: 100px;
+      height: 100px;
+      margin: 0 auto;
+      margin-top: 30px;
+      font-size: 60px;
+      border-radius: 20px;
+      border: none;
+      outline: none;
+      box-shadow: 0 10px 40px 0 #FFF; }
+      .projects .flex-row .projects-images .github:hover {
+        color: #FFF;
+        background-color: #000;
+        box-shadow: none;
+        transition: .6s;
+        transform: scale(1.1); }
+    .projects .flex-row .projects-images .portfolio-btn {
+      color: #2162AF;
+      background-color: #FFF; }
+      .projects .flex-row .projects-images .portfolio-btn:hover {
+        color: #FFF;
+        background-color: #2162AF; }
+    .projects .flex-row .projects-images .fire-btn {
+      color: #fa9600;
+      background-color: #FFF; }
+      .projects .flex-row .projects-images .fire-btn:hover {
+        color: #FFF;
+        background-color: #fa9600; }
 
 /*------------------------------*/
 /* Game section */
