--- a/css/style.scss
+++ b/css/style.scss
@@ -20,7 +20,7 @@ $html_orange: #F16529;
 $css_darker_blue: #2162AF;
 $css_blue: #369CD6;
 $js_yellow: #F7DF1E;
-$fire: #C63473;
+$fire: #fa9600;
 $company: #313332;
 
 /*------------------------------*/
@@ -203,17 +203,17 @@ header {
 			}
 			.image1 {
 				img {
-					width: 90%;
+					width: 70%;
 				}
 			}
 			.image2 {
 				img {
-					width: 90%;
+					width: 70%;
 				}
 			}
 			.image3 {
 				img {
-					width: 90%;
+					width: 70%;
 				}
 			}
 			.progress {
@@ -339,66 +339,75 @@ header {
 		text-align: center;
 		}
 	.flex-row {
-		display: flex;
-		flex-direction: row;
-		align-content: center;
-		position: absolute;
-		top: 50%;
-		margin-top: -310px;
-		left: 0;
-		right: 0;
-		.portfolio {
-			h1 {
-				color: $black_color;
-				font-family: 'Mitr', sans-serif;
-				font-size: 50px;
-			}
+		h1 {
+			font-family: $font_stack;
+			font-size: 50px;
 		}
-		.fire {
-			h1 {
-				color: $fire;
-				font-family: 'Eagle Lake', cursive;
-				font-size: 50px;
-			}
-		}
-		.company {
-			h1 {
-				color: $company;
-				font-family: 'Open Sans', sans-serif;
-				font-size: 50px;
-			}
-		}
+		// .portfolio {
+		// 	h1 {
+		// 		color: $black_color;
+		// 	}
+		// }
+		// .fire {
+		// 	h1 {
+		// 		color: $fire;
+		// 	}
+		// }
+		// .company {
+		// 	h1 {
+		// 		color: $company;
+		// 	}
+		// }
 		.projects-images {
-			cursor: pointer;
 			text-align: center;
 			img {
+				cursor: pointer;
 				height: 300px;
 				max-height: 100%;
 				width: 500px;
 				max-width: 100%;
-				margin: 40px 0;
+				margin: 40px 30px;
+				box-shadow: 0 10px 40px 20px $white_color;
 				&:hover {
-					transform: scale(1.3);
-					transition: .4s;
+					transform: scale(1.2);
+					transition: .6s;
+					box-shadow: none;
 				}
 			}
-			text-decoration: none;
 			.github {
-			display: inline-block;
-			cursor: pointer;
-			width: 100px;
-			height: 100px;
-			margin: 0 auto;
-			margin-top: 30px;
-			font-size: 60px;
-			border-radius: 20px;
-			border: none;
-			outline: none;
-			&:hover {
-				color: $white_color;
-				background-color: $black_color;
-				transition: .6s;
-				transform: scale(1.1);
+				display: inline-block;
+				cursor: pointer;
+				width: 100px;
+				height: 100px;
+				margin: 0 auto;
+				margin-top: 30px;
+				font-size: 60px;
+				border-radius: 20px;
+				border: none;
+				outline: none;
+				box-shadow: 0 10px 40px 0 $white_color;
+				&:hover {
+					color: $white_color;
+					background-color: $black_color;
+					box-shadow: none;
+					transition: .6s;
+					transform: scale(1.1);
+				}
+			}
+			.portfolio-btn {
+				color: $css_darker_blue;
+				background-color: $white_color;
+				&:hover {
+					color: $white_color;
+					background-color: $css_darker_blue;
+				}
+			}
+			.fire-btn {
+				color: $fire;
+				background-color: $white_color;
+				&:hover {
+					color: $white_color;
+					background-color: $fire;
 				}
 			}
 		}
