--- a/css/style.css
+++ b/css/style.css
@@ -269,60 +269,67 @@ header {
   height: 100vh;
   background: linear-gradient(180deg, #499ADB, #9FCCED);
   max-width: 100%;
-  position: relative; }
+  display: flex;
+  justify-content: center;
+  align-items: center; }
   .projects h1 {
     color: #FFF;
     font-size: 40px;
     margin: 0 auto;
     margin-bottom: 20px;
     text-align: center; }
-  .projects .flex-row h1 {
-    font-family: Lato, sans-serif;
-    font-size: 50px; }
-  .projects .flex-row .projects-images {
-    text-align: center; }
-    .projects .flex-row .projects-images img {
-      cursor: pointer;
-      height: 300px;
-      max-height: 100%;
-      width: 500px;
-      max-width: 100%;
-      margin: 40px 30px;
-      box-shadow: 0 10px 40px 20px #FFF; }
-      .projects .flex-row .projects-images img:hover {
-        transform: scale(1.2);
-        transition: .6s;
-        box-shadow: none; }
-    .projects .flex-row .projects-images .github {
-      display: inline-block;
-      cursor: pointer;
-      width: 100px;
-      height: 100px;
-      margin: 0 auto;
-      margin-top: 30px;
-      font-size: 60px;
-      border-radius: 20px;
-      border: none;
-      outline: none;
-      box-shadow: 0 10px 40px 0 #FFF; }
-      .projects .flex-row .projects-images .github:hover {
-        color: #FFF;
-        background-color: #000;
-        box-shadow: none;
-        transition: .6s;
-        transform: scale(1.1); }
-    .projects .flex-row .projects-images .portfolio-btn {
-      color: #2162AF;
-      background-color: #FFF; }
-      .projects .flex-row .projects-images .portfolio-btn:hover {
-        color: #FFF;
-        background-color: #2162AF; }
-    .projects .flex-row .projects-images .fire-btn {
-      color: #fa9600;
-      background-color: #FFF; }
-      .projects .flex-row .projects-images .fire-btn:hover {
-        color: #FFF;
-        background-color: #fa9600; }
+  .projects .flex-row {
+    width: 100%; }
+    .projects .flex-row h1 {
+      font-family: Lato, sans-serif;
+      font-size: 50px;
+      flex-wrap: nowrap; }
+    .projects .flex-row .projects-images {
+      text-align: center;
+      padding: 0 30px; }
+      .projects .flex-row .projects-images img {
+        display: block;
+        text-align: center;
+        cursor: pointer;
+        height: 300px;
+        width: 500px;
+        max-width: 100%;
+        max-height: 100%;
+        margin: 40px auto;
+        box-shadow: 0 10px 40px 20px #FFF; }
+        .projects .flex-row .projects-images img:hover {
+          transform: scale(1.1);
+          transition: .6s;
+          box-shadow: none; }
+      .projects .flex-row .projects-images .github {
+        cursor: pointer;
+        width: 100px;
+        height: 100px;
+        margin: 0 auto;
+        margin-top: 30px;
+        font-size: 60px;
+        border-radius: 20px;
+        border: none;
+        outline: none;
+        box-shadow: 0 10px 40px 0 #FFF; }
+        .projects .flex-row .projects-images .github:hover {
+          color: #FFF;
+          background-color: #000;
+          box-shadow: none;
+          transition: .6s;
+          transform: scale(1.1); }
+      .projects .flex-row .projects-images .portfolio-btn {
+        color: #2162AF;
+        background-color: #FFF; }
+        .projects .flex-row .projects-images .portfolio-btn:hover {
+          color: #FFF;
+          background-color: #2162AF; }
+      .projects .flex-row .projects-images .fire-btn {
+        color: #fa9600;
+        background-color: #FFF; }
+        .projects .flex-row .projects-images .fire-btn:hover {
+          color: #FFF;
+          background-color: #fa9600; }
 
 /*------------------------------*/
 /* Game section */
@@ -476,6 +483,7 @@ footer {
 /* Responsive design */
 /*------------------------------*/
 /*------------------------------*/
+/*------------------------------*/
 /* For smartphones: */
 /*------------------------------*/
 @media (max-width: 767px) {
@@ -515,8 +523,19 @@ footer {
   .col-s-12 {
     flex: 100%; }
 
+  /*------------------------------*/
+  /* Projects section */
+  /*------------------------------*/
   .projects {
-    height: 100%; } }
+    height: 100%; }
+    .projects .flex-row .projects-images img {
+      margin-right: auto;
+      margin-left: auto; }
+      .projects .flex-row .projects-images img:hover {
+        transform: none; }
+    .projects .flex-row .projects-images .github {
+      margin-bottom: 100px; } }
+/*------------------------------*/
 /* For tablets: */
 /*------------------------------*/
 @media (min-width: 768px) and (max-width: 1199px) {
@@ -556,8 +575,19 @@ footer {
   .col-m-12 {
     flex: 100%; }
 
+  /*------------------------------*/
+  /* Projects section */
+  /*------------------------------*/
   .projects {
-    height: 100%; } }
+    height: 100%; }
+    .projects .flex-row .projects-images img {
+      margin-right: auto;
+      margin-left: auto; }
+      .projects .flex-row .projects-images img:hover {
+        transform: none; }
+    .projects .flex-row .projects-images .github {
+      margin-bottom: 100px; } }
+/*------------------------------*/
 /* For desktop: */
 /*------------------------------*/
 @media (min-width: 1200px) {
