--- a/css/style.scss
+++ b/css/style.scss
@@ -330,7 +330,9 @@ header {
 	height: 100vh;
 	background: linear-gradient(180deg, #499ADB, #9FCCED);
 	max-width: 100%;
-	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	h1 {
 		color: $white_color;
 		font-size: 40px;
@@ -339,43 +341,32 @@ header {
 		text-align: center;
 		}
 	.flex-row {
+		width: 100%;
 		h1 {
 			font-family: $font_stack;
 			font-size: 50px;
+			flex-wrap: nowrap;
 		}
-		// .portfolio {
-		// 	h1 {
-		// 		color: $black_color;
-		// 	}
-		// }
-		// .fire {
-		// 	h1 {
-		// 		color: $fire;
-		// 	}
-		// }
-		// .company {
-		// 	h1 {
-		// 		color: $company;
-		// 	}
-		// }
 		.projects-images {
 			text-align: center;
+			padding: 0 30px;
 			img {
+				display: block;
+				text-align: center;
 				cursor: pointer;
 				height: 300px;
-				max-height: 100%;
 				width: 500px;
 				max-width: 100%;
-				margin: 40px 30px;
+				max-height: 100%;
+				margin: 40px auto;
 				box-shadow: 0 10px 40px 20px $white_color;
 				&:hover {
-					transform: scale(1.2);
+					transform: scale(1.1);
 					transition: .6s;
 					box-shadow: none;
 				}
 			}
 			.github {
-				display: inline-block;
 				cursor: pointer;
 				width: 100px;
 				height: 100px;
@@ -597,6 +588,7 @@ footer {
 /*------------------------------*/
 /*------------------------------*/
 
+/*------------------------------*/
 /* For smartphones: */
 /*------------------------------*/
 
@@ -615,12 +607,29 @@ footer {
     .col-s-11 {flex: 91.667%;}
     .col-s-12 {flex: 100%;}
 
+	/*------------------------------*/
+	/* Projects section */
+	/*------------------------------*/
+
     .projects {
-	height: 100%;
+		height: 100%;
+		.flex-row .projects-images {
+			img {
+				margin-right: auto;
+				margin-left: auto;
+				&:hover {
+					transform: none;
+				}
+			}
+			.github {
+				margin-bottom: 100px;
+			}
+		}
 	}
 
 }
 
+/*------------------------------*/
 /* For tablets: */
 /*------------------------------*/
 
@@ -639,11 +648,29 @@ footer {
     .col-m-11 {flex: 91.667%;}
     .col-m-12 {flex: 100%;}
 
+    /*------------------------------*/
+	/* Projects section */
+	/*------------------------------*/
+
     .projects {
-	height: 100%;
+		height: 100%;
+		.flex-row .projects-images {
+			img {
+				margin-right: auto;
+				margin-left: auto;
+				&:hover {
+					transform: none;
+				}
+			}
+			.github {
+				margin-bottom: 100px;
+			}
+		}
 	}
+
 }
 
+/*------------------------------*/
 /* For desktop: */
 /*------------------------------*/
 
